--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,13 @@
+@@ -1,20 +1,22 @@
 {
 	"name": "Banner Web Calendar Exporter (WPI)",
 	"description": "Generate an ICS for Google Cal, iCal, etc from BannerWeb",
+	"version": "1.0.2",
 	"version": "1.1.0",
 	"author": "Paul Roberts based off of work by Evin Ugur. https://github.com/paul-roberts-vt/BannerwebCalendarExporterWPI",
+	"permissions": [
+		"https://bannerweb.jefferson.edu/pls/prod/*"
+	],
   	"permissions": [
     	"tabs", "http://*.edu/*", "https://*.edu/*"
   	],
@@ -17,6 +22,14 @@
   },
 
 
+	"web_accessible_resources": ["makeSchedule.js", "ics.deps.min.js", "ics.min.js"],
+	"content_scripts": [
+		{
+			"matches": ["https://bannerweb.wpi.edu/pls/prod/*"],
+			"js": ["ics.deps.min.js", "ics.min.js", "app.js"],
+			"run_at": "document_idle"
+		}
+	],
 	"icons": {"128" : "128.png"},
 	"manifest_version": 2
-}
+} 
